--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>panel_gestor</title>
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="https://kendo.cdn.telerik.com/2023.2.621/styles/kendo.default-v2.min.css"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -21,8 +22,8 @@
                 <div class="breadcrumb">
                     <p>Dashboard >> Grupos</p>
                 </div>
-                <div class="subheader">
-                    <p>Filtros: Estado En ejecución / Anulado: No / Formación presencial: Si</p>
+                <div class="subheader d-flex align-items-center justify-content-start">
+                    <p class="filtros me-1">Filtros:</p><p>Estado En ejecución / Anulado: No / Formación presencial: Si</p>
                 </div>
             </div>
         </div>
@@ -70,7 +71,10 @@
     </main>
     
     <script src="js/script.js"></script>
+    <script src="https://kendo.cdn.telerik.com/2023.2.621/js/jquery.min.js"></script>
+    <script src="https://kendo.cdn.telerik.com/2023.2.621/js/kendo.all.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </body>
 </html>
 
