--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>panel_gestor</title>
+    <title>panel_gestor | Formador</title>
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="https://kendo.cdn.telerik.com/2023.2.621/styles/kendo.default-v2.min.css"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -34,24 +34,24 @@
             </div>
             <div class="chatbotAyuda d-flex align-items-center justify-content-center flex-column">
                 <img src="assets/img/chatbotAyuda.svg" alt="">
-                <p>ChatBot de Ayuda</p>
+                <p class="mt-2">ChatBot de Ayuda</p>
             </div>
             <div class="usuario d-flex align-items-center justify-content-center flex-column">
-                <div class="usuarioIcono d-flex align-items-center justify-content-center">
-                    <img src="assets/img/Layer_1.svg" alt="">
+                <div class="usuarioIcono d-flex align-items-center justify-content-center" id="formadorIcon">
+                    <img src="assets/img/Layer_1.svg" alt="Icono Formador">
                 </div>
-                <p>Formador</p>
-            </div>
+                <p class="mt-2">Formador</p>
+            </div>            
             <div class="desconectarHeader d-flex align-items-center justify-content-center flex-column" id="disconnect">
                 <img src="assets/img/desconectar-header.svg" alt="">
-                <p>Desconectar</p>
+                <p class="mt-2">Desconectar</p>
             </div>
         </div>
     </header>
     <aside>
         <div class="icons d-flex align-items-center justify-content-center flex-column">
             <img src="assets/img/grupos.svg" alt="">
-            <img src="assets/img/file.svg" alt="">
+            <img src="assets/img/file.svg" alt="" id="fileIcon">
         </div>
     </aside>
     <main>
