--- a/index.html
+++ b/index.html
@@ -29,23 +29,28 @@
             </div>
         </div>
         <div class="rightMenu d-flex align-items-center justify-content-center m-3">
-            <div class="bellIcon d-flex align-items-center justify-content-center flex-column mb-3">
-                <img src="assets/img/bellHeader.svg" alt="">
-                <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">2</span>
-            </div>
-            <div class="chatbotAyuda d-flex align-items-center justify-content-center flex-column">
-                <img src="assets/img/chatbotAyuda.svg" alt="">
-                <p class="mt-2">ChatBot de Ayuda</p>
-            </div>
-            <div class="usuario d-flex align-items-center justify-content-center flex-column">
-                <div class="usuarioIcono d-flex align-items-center justify-content-center" id="formadorIcon">
-                    <img src="assets/img/Layer_1.svg" alt="Icono Formador">
+            <button class="hamburger-btn " aria-controls="hamburger-menu" aria-expanded="false">
+                <img src="assets/img/burger-menu-icon.svg" alt="Menu">
+            </button>
+            <div id="hamburger-menu" class="hamburger-content  flex-row align-items-center">
+                <div class="bellIcon d-flex align-items-center justify-content-center flex-column mb-3">
+                    <img src="assets/img/bellHeader.svg" alt="">
+                    <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">2</span>
                 </div>
-                <p class="mt-2">Formador</p>
-            </div>            
-            <div class="desconectarHeader d-flex align-items-center justify-content-center flex-column" id="disconnect">
-                <img src="assets/img/desconectar-header.svg" alt="">
-                <p class="mt-2">Desconectar</p>
+                <div class="chatbotAyuda d-flex align-items-center justify-content-center flex-column">
+                    <img src="assets/img/chatbotAyuda.svg" alt="">
+                    <p class="mt-2">ChatBot de Ayuda</p>
+                </div>
+                <div class="usuario d-flex align-items-center justify-content-center flex-column">
+                    <div class="usuarioIcono d-flex align-items-center justify-content-center" id="formadorIcon">
+                        <img src="assets/img/Layer_1.svg" alt="Icono Formador">
+                    </div>
+                    <p class="mt-2">Formador</p>
+                </div>            
+                <div class="desconectarHeader d-flex align-items-center justify-content-center flex-column" id="disconnect">
+                    <img src="assets/img/desconectar-header.svg" alt="">
+                    <p class="mt-2">Desconectar</p>
+                </div>
             </div>
         </div>
     </header>
