Modificacion de archivos gestor.js y administrador.js

--- a/assets/pages/administrador.html
+++ b/assets/pages/administrador.html
@@ -37,7 +37,7 @@
                     <img src="../img/bellHeader.svg" alt="">
                     <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">2</span>
                 </div>
-                <div class="chatbotAyuda d-flex align-items-center justify-content-center flex-column">
+                <div class="chatbotAyuda d-flex align-items-center justify-content-center flex-column cp">
                     <img src="../img/chatbotAyuda.svg" alt="">
                     <p class="mt-2">ChatBot de Ayuda</p>
                 </div>
