Ultimos cambios Fundae PC 26/07

--- a/assets/pages/administrador.html
+++ b/assets/pages/administrador.html
@@ -339,6 +339,7 @@
     </main>
     <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
         <div class="offcanvas-header d-flex align-items-start justify-content-between flex-column">
+            <div class="volverGestor cp mb-4 d-flex align-items-center justify-content-start"><img src="../img/back.svg"><p class="mb-0 ms-2">Volver</p></div>
             <div class="offCanvasHeader d-flex align-items-center justify-content-between w-100">
                 <h5 id="offcanvasRightLabel" class="mb-0">Editar / Ver detalle Grupo</h5>
                 <div class="closeExpandReduce d-flex align-items-center justify-content-end">
