Fundae PC mejora y cambios version movil

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico">
 </head>
 <body>
-    <header class="d-flex align-items-center justify-content-between">
-        <div class="leftMenu d-flex align-items-center justify-content-start">
+    <header>
+        <div class="leftMenu">
             <div class="fundacion d-flex align-items-center justify-content-start m-2 me-3">
                 <img src="assets/img/fundacionEstatal.svg" alt="">
                 <img src="assets/img/fundacionEstatalLogo.svg" alt="">
@@ -32,7 +32,7 @@
             <button class="hamburger-btn " aria-controls="hamburger-menu" aria-expanded="false">
                 <img src="assets/img/burger-menu-icon.svg" alt="Menu">
             </button>
-            <div id="hamburger-menu" class="hamburger-content  flex-row align-items-center">
+            <div id="hamburger-menu" class="hamburger-content">
                 <div class="bellIcon d-flex align-items-center justify-content-center flex-column mb-3">
                     <img src="assets/img/bellHeader.svg" alt="">
                     <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">2</span>
