Tabla administrador version mobile

--- a/assets/pages/administrador.html
+++ b/assets/pages/administrador.html
@@ -336,6 +336,18 @@
                 </tbody>
             </table>
         </div>
+        <div class="container table-container">
+            <table class="table table-bordered" id="dataTable">
+                <thead>
+                <tr id="tableHeader">
+                </tr>
+                <tr id="searchHeaderRow">
+                </tr>
+                </thead>
+                <tbody>
+                </tbody>
+            </table>
+        </div>
     </main>
     <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
         <div class="offcanvas-header d-flex align-items-start justify-content-between flex-column">
